Work with Individuals and Classes for resolving paths