@@ -2,10 +2,10 @@ package com.misset.opp.odt.psi.impl.resolvable.query;
 
 import com.intellij.lang.ASTNode;
 import com.misset.opp.odt.psi.ODTEquationStatement;
+import com.misset.opp.ttl.OppModel;
 import org.apache.jena.ontology.OntResource;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.Set;
 
 public abstract class ODTResolvableEquationStatement extends ODTResolvableQuery implements ODTEquationStatement {
@@ -15,6 +15,6 @@ public abstract class ODTResolvableEquationStatement extends ODTResolvableQuery 
 
     @Override
     public Set<OntResource> resolve() {
-        return Collections.emptySet();
+        return Set.of(OppModel.INSTANCE.XSD_BOOLEAN_INSTANCE);
     }
 }
